[project]
name = "animate-blueprint-depgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cairosvg>=2.8.2",
    "gitpython>=3.1.45",
    "leanblueprint>=0.0.20",
    "pillow>=12.0.0",
    "pydot>=4.0.1",
    "requests>=2.32.5",
]
